code/appinsights/k8s/networkdebug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: networkdebug
  namespace: northwind-demo
  labels:
    app: networkdebug
    component: api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: networkdebug
  template:
    metadata:
      labels:
        app: networkdebug
        component: api
        tier: backend
    spec:
      containers:
      - name: api
        image: eroiborges/network-debug:alpine
